# pyseg2

./: .gitignore  README.md  pyproject.toml  setup.py
pyseg2/: binaryblocks.py  fromobspy.py  rawseg2.py  seg2file.py  toobspy.py
